upstream 1.7.13